<resources>
    <string name="app_name">Android Modul One</string>
    <string name="text_view">TextView</string>
    <string name="submit">Submit</string>
    <string name="nik">NIK/KITAS</string>
    <string name="nama">Nama</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="iuranDesa">Desa</string>
    <string name="iuranSampah">Sampah dan Keamanan</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="_0">0 Orang</string>
    <string name="address">Alamat</string>
    <string name="title_activity_navbar">navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cek_penduduk">CEK LIST IURAN PENDUDUK</string>
    <string name="add_penduduk">TAMBAH LIST IURAN PENDUDUK</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>